tests/integration/snapshots/integration__conformance__n_structure_uescaped_lf_before_string.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[\u000A""]
stdout ---

stderr ---
error: unexpected character `\`. expected start of a json value
 --> stdin:1:2
  |
1 | [\u000A""]
  |  ^
